--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -8,6 +8,9 @@
   </head>
 
   <body>
+    <div id="nav">
+      <a href="/">Home</a> | <a href="/edit/{{name}}">Edit</a>
+    </div>
     <div id="content">
       {{{yield}}}
     </div>
