--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Gollum - {{title}}</title>
     <link rel="stylesheet" href="/css/global.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="/css/syntax.css" type="text/css" charset="utf-8" />
   </head>
 
   <body>
