--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -1,1 +1,10 @@
-{{{content}}}
+<div class="guide">
+  <div class="main">
+    <div class="actions">
+      <a href="/">Home</a> | <a href="/edit/{{name}}">Edit</a>
+    </div>
+    <div class="wikistyle">
+      {{{content}}}
+    </div>
+  </div>
+</div>
