Show human name as title.

--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -3,6 +3,7 @@
     <div class="actions">
       <a href="/">Home</a> | <a href="/edit/{{name}}">Edit</a>
     </div>
+    <h1>{{human_name}}</h1>
     <div class="wikistyle">
       {{{content}}}
     </div>
