Make version selector active (add jquery).

--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/screen.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="/css/gollum.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="/css/syntax.css" type="text/css" charset="utf-8" />
+    <script src="/javascript/jquery-1.4.2.min.js" type="text/javascript" />
   </head>
 
   <body>
