--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -25,3 +25,9 @@
     </select>
   </div>
 </div>
+
+<script type="text/javascript">
+  $('#versions_select').change(function() {
+    location.href = this.value
+  })
+</script>
