Initial work on the editbar.

--- a/templates/edit.mustache
+++ b/templates/edit.mustache
@@ -12,7 +12,27 @@
       </select>
     </label>
     <label>
-      Body
+      <div id="editbar">
+        <div class="group group-separator">
+          <span title="Bold" class="bold button">Bold</span>
+          <span title="Italic" class="italic button">Italic</span>
+        </div>
+        <div class="group">
+          <span title="Link" class="link button">Link</span>
+          <span title="Image" class="image button">Image</span>
+        </div>
+        <div class="group">
+          <span class="tab">
+            <a class="open" href="">Advanced</a>
+          </span>
+          <span class="tab">
+            <a href="">Special Characters</a>
+          </span>
+          <span class="tab">
+            <a href="">Help</a>
+          </span>
+        </div>
+      </div>
       <textarea name="content">{{content}}</textarea>
     </label>
     <label>
