--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="/css/screen.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="/css/gollum.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="/css/syntax.css" type="text/css" charset="utf-8" />
-    <script src="/javascript/jquery-1.4.2.min.js" type="text/javascript" />
+    <link rel="stylesheet" href="/css/editbar.css" type="text/css" charset="utf-8" />
+    <script src="/javascript/jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="/javascript/jquery.text_selection-1.0.0.min.js" type="text/javascript"></script>
+    <script src="/javascript/gollum.js" type="text/javascript"></script>
   </head>
 
   <body>
