Initial twiddle mechanics.

--- a/templates/edit.mustache
+++ b/templates/edit.mustache
@@ -22,14 +22,14 @@
           <span title="Image" class="image button">Image</span>
         </div>
         <div class="group">
-          <span class="tab">
-            <a class="open" href="">Advanced</a>
+          <span class="tab advanced">
+            <a href="#">Advanced</a>
           </span>
-          <span class="tab">
-            <a href="">Special Characters</a>
+          <span class="tab special">
+            <a href="#">Special Characters</a>
           </span>
-          <span class="tab">
-            <a href="">Help</a>
+          <span class="tab help">
+            <a href="#">Help</a>
           </span>
         </div>
       </div>
