Fully operational ul and ol buttons.

--- a/public/css/editbar.css
+++ b/public/css/editbar.css
@@ -48,6 +48,14 @@
       background-position: 2px -1438px;
     }
 
+    #editbar .ul {
+      background-position: 2px -1366px;
+    }
+
+    #editbar .ol {
+      background-position: 2px -1078px;
+    }
+
   #editbar .tab {
     float: left;
     display: block;
