--- a/templates/edit.mustache
+++ b/templates/edit.mustache
@@ -14,12 +14,16 @@
     <label>
       <div id="editbar">
         <div class="group group-separator">
+          <span title="Link" class="link button">Link</span>
+          <span title="Image" class="image button">Image</span>
+        </div>
+        <div class="group group-separator">
           <span title="Bold" class="bold button">Bold</span>
           <span title="Italic" class="italic button">Italic</span>
         </div>
-        <div class="group">
-          <span title="Link" class="link button">Link</span>
-          <span title="Image" class="image button">Image</span>
+        <div class="group group-separator">
+          <span title="Unordered List" class="ul button">Unordered List</span>
+          <span title="Ordered List" class="ol button">Ordered List</span>
         </div>
         <div class="group">
           <span class="tab advanced">
