--- a/public/css/editbar.css
+++ b/public/css/editbar.css
@@ -3,11 +3,17 @@
   border-top: 1px solid #888;
   border-right:  1px solid #888;
   width: 100%;
-  background: white;
-  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#EBF1FF));
-  background: -moz-linear-gradient(top,  #fff,  #EBF1FF);
   overflow: hidden;
+  font-family: sans-serif;
+  font-size: 13px;
 }
+
+  #editbar .menu {
+    overflow: hidden;
+    background: white;
+    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#EBF1FF));
+    background: -moz-linear-gradient(top,  #fff,  #EBF1FF);
+  }
 
   #editbar .group {
     float: left;
@@ -59,8 +65,6 @@
   #editbar .tab {
     float: left;
     display: block;
-    font-family: sans-serif;
-    font-size: 13px;
   }
 
     #editbar .tab a {
@@ -90,3 +94,73 @@
     #editbar .tab a:hover {
       text-decoration: underline;
     }
+
+  #editbar .sections {
+    clear: both;
+    float: left;
+    width: 100%;
+    overflow: visible;
+    border-top: 1px solid #888;
+    height: 1750px;
+  }
+
+    #editbar .sections .toc {
+      float: left;
+      width: 20%;
+      overflow: auto;
+    }
+
+      #editbar .sections .toc div {
+        cursor: pointer;
+        padding: 4px 4px 4px 6px;
+        background-color: #E0EEF7;
+        color: blue;
+      }
+
+      #editbar .sections .toc div.current {
+        cursor: default;
+        background-color: white;
+        color: #333;
+      }
+
+    #editbar .sections .pages {
+      overflow: auto;
+      background-color: white;
+      float: right;
+      width: 80%;
+      height: 1750px;
+    }
+
+      #editbar .sections .page {
+        display: none;
+      }
+
+      #editbar .sections .page.current {
+        display: block;
+      }
+
+      #editbar .sections .pages th {
+        color: #999;
+        font-weight: bold;
+        padding: 5px;
+        text-align: left;
+      }
+
+      #editbar .sections .pages td {
+        color: black;
+        padding: 5px;
+        border-top: 1px solid #eee;
+      }
+
+      #editbar .sections .pages span.invisible {
+        color: #bbb;
+        padding-left: 1px;
+      }
+      
+      #editbar .sections .pages .shortcodes th {
+        text-align: center;
+      }
+      
+      #editbar .sections .pages .shortcodes ul {
+        list-style-type: none;
+      }
