--- a/templates/edit.mustache
+++ b/templates/edit.mustache
@@ -12,31 +12,7 @@
       </select>
     </label>
     <label>
-      <div id="editbar">
-        <div class="group group-separator">
-          <span title="Link" class="link button">Link</span>
-          <span title="Image" class="image button">Image</span>
-        </div>
-        <div class="group group-separator">
-          <span title="Bold" class="bold button">Bold</span>
-          <span title="Italic" class="italic button">Italic</span>
-        </div>
-        <div class="group group-separator">
-          <span title="Unordered List" class="ul button">Unordered List</span>
-          <span title="Ordered List" class="ol button">Ordered List</span>
-        </div>
-        <div class="group">
-          <span class="tab advanced">
-            <a href="#">Advanced</a>
-          </span>
-          <span class="tab special">
-            <a href="#">Special Characters</a>
-          </span>
-          <span class="tab help">
-            <a href="#">Help</a>
-          </span>
-        </div>
-      </div>
+      {{>editbar}}
       <textarea name="content">{{content}}</textarea>
     </label>
     <label>
