--- a/templates/editbar.mustache
+++ b/templates/editbar.mustache
@@ -24,7 +24,7 @@
       <div class="links gollum">Links</div>
       <div class="images gollum">Images</div>
       <div class="code gollum">Code</div>
-      <div class="formatting current">Formatting</div>
+      <div class="formatting">Formatting</div>
       <div class="lists">Lists</div>
     </div>
     <div class="pages">
