--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -4,7 +4,7 @@
       <a href="/">Home</a> | <a href="/edit/{{name}}">Edit</a>
     </div>
     <h1>{{human_name}}</h1>
-    <div class="wikistyle">
+    <div class="wikistyle gollum {{format}}">
       {{{content}}}
     </div>
   </div>
