--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -129,7 +129,7 @@ html {overflow-y: scroll;}
     /* main */
 
     #guides .guide .main {
-      float: left;
+      width: 100%;
     }
 
     /* sidebar */
