--- a/templates/editbar.mustache
+++ b/templates/editbar.mustache
@@ -17,10 +17,20 @@
         <a href="#">Help</a>
       </span>
     </div>
+    <div class="group group-right">
+      <span class="tab">
+        Format:
+        <select id="wiki_format" name="format">
+          {{#formats}}
+            <option {{#selected}}selected="true" {{/selected}}value="{{id}}">{{name}}</option>
+          {{/formats}}
+        </select>
+      </span>
+    </div>
   </div>
   <div class="sections">
     <div class="toc">
-      <div class="headers">Headers</div>
+      <div class="headers current">Headers</div>
       <div class="links gollum">Links</div>
       <div class="images gollum">Images</div>
       <div class="code gollum">Code</div>
