--- a/templates/edit.mustache
+++ b/templates/edit.mustache
@@ -2,19 +2,22 @@
   <a href="/{{name}}">&laquo; Back</a>
   <h1>Editing &ldquo;{{name}}&rdquo;</h1>
 
-  <form class="edit_wiki" method="post" action="/edit/{{name}}">
-    <label>
-      Format<br />
-      <select name="format">
-        {{#formats}}
-          <option {{#selected}}selected="true" {{/selected}}value="{{id}}">{{name}}</option>
-        {{/formats}}
-      </select>
-    </label>
-    <label>
-      {{>editbar}}
-      <textarea name="content">{{content}}</textarea>
-    </label>
+  <form iclass="edit_wiki" method="post" action="/edit/{{name}}">
+    <div id="wiki-form" class="comment-form wiki-form">
+      <ul class="tabs inline-tabs">
+        <li><a href="#write_bucket" action="write">Write</a></li>
+        <li><a href="#preview_bucket" action="preview">Preview</a></li>
+      </ul>
+      <div id="write_bucket" class="tab-content">
+        {{>editbar}}
+        <div class="inner">
+          <textarea name="content">{{content}}</textarea>
+        </div>
+      </div>
+      <div id="preview_bucket" class="tab-content content-body content wikistyle gollum">
+        <p>Loading content...</p>
+      </div>
+    </div>
     <label>
       Edit Summary <small>(Briefly describe the changes you have made)</small><br />
       <input type="text" class="text" name="message" />
