--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/css/editbar.css" type="text/css" charset="utf-8" />
     <script src="/javascript/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="/javascript/jquery.text_selection-1.0.0.min.js" type="text/javascript"></script>
+    <script src="/javascript/jquery.previewable_comment_form.js" type="text/javascript"></script>
+    <script src="/javascript/jquery.tabs.js" type="text/javascript"></script>
     <script src="/javascript/gollum.js" type="text/javascript"></script>
     <script src="/javascript/MathJax/MathJax.js" type="text/javascript">
       MathJax.OutputJax.fontDir = "http://github-assets.s3.amazonaws.com/javascripts/MathJax/fonts"
