--- a/templates/editbar.mustache
+++ b/templates/editbar.mustache
@@ -18,7 +18,7 @@
       </span>
     </div>
     <div class="group group-right">
-      <span class="tab">
+      <span class="tab format">
         Format:
         <select id="wiki_format" name="format">
           {{#formats}}
