Fix format selection help trigger.

--- a/templates/editbar.mustache
+++ b/templates/editbar.mustache
@@ -30,7 +30,7 @@
   </div>
   <div class="sections">
     <div class="toc">
-      <div class="headers current">Headers</div>
+      <div class="headers">Headers</div>
       <div class="links gollum">Links</div>
       <div class="images gollum">Images</div>
       <div class="code gollum">Code</div>
